newGrammar/grammarYAPLParser.py
# Generated from .\grammarYAPL.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class grammarYAPLParser ( Parser ):

    grammarFileName = "grammarYAPL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'('", "','", "')'", "':'", 
                     "'<-'", "'@'", "'let'", "'*'", "'/'", "'+'", "'-'", 
                     "'~'", "'<'", "'<='", "'='", "'true'", "'false'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "';'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "TRUE", "FALSE", "FI", "IF", 
                      "ELSE", "WHILE", "IN", "LOOP", "POOL", "THEN", "NEW", 
                      "NOT", "ISVOID", "INHERITS", "CLASS", "TYPE", "ID", 
                      "INT", "SEMICOLON", "STRING", "SMALLCOMMENT", "BIGCOMMENT", 
                      "WHITESPACE", "POINT", "ERROR" ]

    RULE_program = 0
    RULE_create_class = 1
    RULE_feature = 2
    RULE_formal = 3
    RULE_expr = 4

    ruleNames =  [ "program", "create_class", "feature", "formal", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    TRUE=18
    FALSE=19
    FI=20
    IF=21
    ELSE=22
    WHILE=23
    IN=24
    LOOP=25
    POOL=26
    THEN=27
    NEW=28
    NOT=29
    ISVOID=30
    INHERITS=31
    CLASS=32
    TYPE=33
    ID=34
    INT=35
    SEMICOLON=36
    STRING=37
    SMALLCOMMENT=38
    BIGCOMMENT=39
    WHITESPACE=40
    POINT=41
    ERROR=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(grammarYAPLParser.EOF, 0)

        def create_class(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYAPLParser.Create_classContext)
            else:
                return self.getTypedRuleContext(grammarYAPLParser.Create_classContext,i)


        def getRuleIndex(self):
            return grammarYAPLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = grammarYAPLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                self.create_class()
                self.state = 13 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==grammarYAPLParser.CLASS):
                    break

            self.state = 15
            self.match(grammarYAPLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Create_classContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(grammarYAPLParser.CLASS, 0)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(grammarYAPLParser.TYPE)
            else:
                return self.getToken(grammarYAPLParser.TYPE, i)

        def INHERITS(self):
            return self.getToken(grammarYAPLParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYAPLParser.FeatureContext)
            else:
                return self.getTypedRuleContext(grammarYAPLParser.FeatureContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(grammarYAPLParser.SEMICOLON)
            else:
                return self.getToken(grammarYAPLParser.SEMICOLON, i)

        def getRuleIndex(self):
            return grammarYAPLParser.RULE_create_class

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate_class" ):
                listener.enterCreate_class(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate_class" ):
                listener.exitCreate_class(self)




    def create_class(self):

        localctx = grammarYAPLParser.Create_classContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_create_class)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self.match(grammarYAPLParser.CLASS)
            self.state = 18
            self.match(grammarYAPLParser.TYPE)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==grammarYAPLParser.INHERITS:
                self.state = 19
                self.match(grammarYAPLParser.INHERITS)
                self.state = 20
                self.match(grammarYAPLParser.TYPE)


            self.state = 23
            self.match(grammarYAPLParser.T__0)
            self.state = 27 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 24
                self.feature()
                self.state = 25
                self.match(grammarYAPLParser.SEMICOLON)
                self.state = 29 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==grammarYAPLParser.ID):
                    break

            self.state = 31
            self.match(grammarYAPLParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(grammarYAPLParser.ID, 0)

        def TYPE(self):
            return self.getToken(grammarYAPLParser.TYPE, 0)

        def expr(self):
            return self.getTypedRuleContext(grammarYAPLParser.ExprContext,0)


        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYAPLParser.FormalContext)
            else:
                return self.getTypedRuleContext(grammarYAPLParser.FormalContext,i)


        def getRuleIndex(self):
            return grammarYAPLParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)




    def feature(self):

        localctx = grammarYAPLParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.match(grammarYAPLParser.ID)
                self.state = 34
                self.match(grammarYAPLParser.T__2)
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==grammarYAPLParser.ID:
                    self.state = 35
                    self.formal()
                    self.state = 37
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==grammarYAPLParser.T__3:
                        self.state = 36
                        self.match(grammarYAPLParser.T__3)


                    self.state = 43
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 44
                self.match(grammarYAPLParser.T__4)
                self.state = 45
                self.match(grammarYAPLParser.T__5)
                self.state = 46
                self.match(grammarYAPLParser.TYPE)
                self.state = 47
                self.match(grammarYAPLParser.T__0)
                self.state = 48
                self.expr(0)
                self.state = 49
                self.match(grammarYAPLParser.T__1)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.match(grammarYAPLParser.ID)
                self.state = 52
                self.match(grammarYAPLParser.T__5)
                self.state = 53
                self.match(grammarYAPLParser.TYPE)
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==grammarYAPLParser.T__6:
                    self.state = 54
                    self.match(grammarYAPLParser.T__6)
                    self.state = 55
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(grammarYAPLParser.ID, 0)

        def TYPE(self):
            return self.getToken(grammarYAPLParser.TYPE, 0)

        def getRuleIndex(self):
            return grammarYAPLParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)




    def formal(self):

        localctx = grammarYAPLParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(grammarYAPLParser.ID)
            self.state = 61
            self.match(grammarYAPLParser.T__5)
            self.state = 62
            self.match(grammarYAPLParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return grammarYAPLParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class DispatchContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarYAPLParser.ExprContext,i)

        def POINT(self):
            return self.getToken(grammarYAPLParser.POINT, 0)
        def ID(self):
            return self.getToken(grammarYAPLParser.ID, 0)
        def TYPE(self):
            return self.getToken(grammarYAPLParser.TYPE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDispatch" ):
                listener.enterDispatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDispatch" ):
                listener.exitDispatch(self)


    class ParanthesisContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(grammarYAPLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParanthesis" ):
                listener.enterParanthesis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParanthesis" ):
                listener.exitParanthesis(self)


    class SumandMinusContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarYAPLParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSumandMinus" ):
                listener.enterSumandMinus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSumandMinus" ):
                listener.exitSumandMinus(self)


    class LoopsContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(grammarYAPLParser.WHILE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarYAPLParser.ExprContext,i)

        def LOOP(self):
            return self.getToken(grammarYAPLParser.LOOP, 0)
        def POOL(self):
            return self.getToken(grammarYAPLParser.POOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoops" ):
                listener.enterLoops(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoops" ):
                listener.exitLoops(self)


    class InverseBitsContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(grammarYAPLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInverseBits" ):
                listener.enterInverseBits(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInverseBits" ):
                listener.exitInverseBits(self)


    class NewTypeContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEW(self):
            return self.getToken(grammarYAPLParser.NEW, 0)
        def TYPE(self):
            return self.getToken(grammarYAPLParser.TYPE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNewType" ):
                listener.enterNewType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNewType" ):
                listener.exitNewType(self)


    class INTContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(grammarYAPLParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterINT" ):
                listener.enterINT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitINT" ):
                listener.exitINT(self)


    class NotContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(grammarYAPLParser.NOT, 0)
        def expr(self):
            return self.getTypedRuleContext(grammarYAPLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot" ):
                listener.enterNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot" ):
                listener.exitNot(self)


    class GreaterThanorEqualContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarYAPLParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGreaterThanorEqual" ):
                listener.enterGreaterThanorEqual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGreaterThanorEqual" ):
                listener.exitGreaterThanorEqual(self)


    class BoolFalContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FALSE(self):
            return self.getToken(grammarYAPLParser.FALSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolFal" ):
                listener.enterBoolFal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolFal" ):
                listener.exitBoolFal(self)


    class GreaterThanContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarYAPLParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGreaterThan" ):
                listener.enterGreaterThan(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGreaterThan" ):
                listener.exitGreaterThan(self)


    class EqualContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarYAPLParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqual" ):
                listener.enterEqual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqual" ):
                listener.exitEqual(self)


    class ContentContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarYAPLParser.ExprContext,i)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(grammarYAPLParser.SEMICOLON)
            else:
                return self.getToken(grammarYAPLParser.SEMICOLON, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContent" ):
                listener.enterContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContent" ):
                listener.exitContent(self)


    class IFsContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(grammarYAPLParser.IF, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarYAPLParser.ExprContext,i)

        def THEN(self):
            return self.getToken(grammarYAPLParser.THEN, 0)
        def ELSE(self):
            return self.getToken(grammarYAPLParser.ELSE, 0)
        def FI(self):
            return self.getToken(grammarYAPLParser.FI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIFs" ):
                listener.enterIFs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIFs" ):
                listener.exitIFs(self)


    class CreateVarContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(grammarYAPLParser.ID)
            else:
                return self.getToken(grammarYAPLParser.ID, i)
        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(grammarYAPLParser.TYPE)
            else:
                return self.getToken(grammarYAPLParser.TYPE, i)
        def IN(self):
            return self.getToken(grammarYAPLParser.IN, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarYAPLParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateVar" ):
                listener.enterCreateVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateVar" ):
                listener.exitCreateVar(self)


    class MultandDivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarYAPLParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultandDiv" ):
                listener.enterMultandDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultandDiv" ):
                listener.exitMultandDiv(self)


    class STRINGContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(grammarYAPLParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSTRING" ):
                listener.enterSTRING(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSTRING" ):
                listener.exitSTRING(self)


    class SelfContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarYAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarYAPLParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelf" ):
                listener.enterSelf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelf" ):
                listener.exitSelf(self)


    class AssignContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(grammarYAPLParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(grammarYAPLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)


    class IDContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(grammarYAPLParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterID" ):
                listener.enterID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitID" ):
                listener.exitID(self)


    class VoidContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISVOID(self):
            return self.getToken(grammarYAPLParser.ISVOID, 0)
        def expr(self):
            return self.getTypedRuleContext(grammarYAPLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVoid" ):
                listener.enterVoid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVoid" ):
                listener.exitVoid(self)


    class BoolTruContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarYAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(grammarYAPLParser.TRUE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolTru" ):
                listener.enterBoolTru(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolTru" ):
                listener.exitBoolTru(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = grammarYAPLParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = grammarYAPLParser.AssignContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 65
                self.match(grammarYAPLParser.ID)
                self.state = 66
                self.match(grammarYAPLParser.T__6)
                self.state = 67
                self.expr(22)
                pass

            elif la_ == 2:
                localctx = grammarYAPLParser.IFsContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 68
                self.match(grammarYAPLParser.IF)
                self.state = 69
                self.expr(0)
                self.state = 70
                self.match(grammarYAPLParser.THEN)
                self.state = 71
                self.expr(0)
                self.state = 72
                self.match(grammarYAPLParser.ELSE)
                self.state = 73
                self.expr(0)
                self.state = 74
                self.match(grammarYAPLParser.FI)
                pass

            elif la_ == 3:
                localctx = grammarYAPLParser.LoopsContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 76
                self.match(grammarYAPLParser.WHILE)
                self.state = 77
                self.expr(0)
                self.state = 78
                self.match(grammarYAPLParser.LOOP)
                self.state = 79
                self.expr(0)
                self.state = 80
                self.match(grammarYAPLParser.POOL)
                pass

            elif la_ == 4:
                localctx = grammarYAPLParser.ContentContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 82
                self.match(grammarYAPLParser.T__0)
                self.state = 86 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 83
                    self.expr(0)
                    self.state = 84
                    self.match(grammarYAPLParser.SEMICOLON)
                    self.state = 88 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << grammarYAPLParser.T__0) | (1 << grammarYAPLParser.T__2) | (1 << grammarYAPLParser.T__8) | (1 << grammarYAPLParser.T__13) | (1 << grammarYAPLParser.TRUE) | (1 << grammarYAPLParser.FALSE) | (1 << grammarYAPLParser.IF) | (1 << grammarYAPLParser.WHILE) | (1 << grammarYAPLParser.NEW) | (1 << grammarYAPLParser.NOT) | (1 << grammarYAPLParser.ISVOID) | (1 << grammarYAPLParser.ID) | (1 << grammarYAPLParser.INT) | (1 << grammarYAPLParser.STRING))) != 0)):
                        break

                self.state = 90
                self.match(grammarYAPLParser.T__1)
                pass
